--- a/buyPath/css/home.css
+++ b/buyPath/css/home.css
@@ -23,7 +23,7 @@ p {
     top: 0;
     width: 100%;
     height: 90px;
-    background: #b59af8ec;
+    background: #F3EDFB;
     opacity: 1;
     z-index: 99;
     position: fixed;
@@ -47,7 +47,7 @@ p {
     display: inline-block;
     justify-content: center;
     align-items: center;
-    background: rgb(27, 27, 27);
+    background: rgb(39, 39, 39);
     padding: 10px 0;
     width: 100%;
 
@@ -105,7 +105,7 @@ p {
     padding: 10px 30px;
     margin: 0px 15px;
     border: solid 1px #6244a4;
-    border-radius: 30px 0 30px 0;
+    border-radius: 30px;
     transition: backgroud .5s;
 
 }
@@ -221,6 +221,10 @@ p {
 
 }
 
+.side-menu-nav a {
+    color: #ddd;
+}
+
 .side-menu-nav ul::-webkit-scrollbar {
     display: none;
 }
@@ -247,6 +251,10 @@ p {
     text-shadow: 0 0 5px black;
     color: #f6f6f6;
     transition: .5s;
+}
+
+.side-menu-nav input {
+    border-radius: 10px;
 }
 
 /*-----------------------------------------------------*/
@@ -582,7 +590,7 @@ p {
 .Price::after {
     content: "";
     position: absolute;
-    left:90%;
+    left: 90%;
     top: 3px;
     width: 25px;
     height: 25px;
@@ -667,6 +675,20 @@ p {
     }
 
     .nav {
+        position: relative;
+        background-color: #e0d2ff;
+    }
+
+    .nav a,
+    .nav i {
+        display: none;
+    }
+
+    .nav .logo {
+        margin: 0 auto;
+    }
+
+    .search input {
         display: none;
     }
 
@@ -746,7 +768,7 @@ p {
         align-items: center;
     }
 
-    .best-popular-cards .card {}
+
 
     .on-sale,
     .most-views {
