--- a/buyPath/css/item.css
+++ b/buyPath/css/item.css
@@ -24,7 +24,7 @@ p {
     top: 0;
     width: 100%;
     height: 90px;
-    background: #b59af8ec;
+    background: #F3EDFB;
     opacity: 1;
     z-index: 99;
     position: fixed;
@@ -106,7 +106,7 @@ p {
     padding: 10px 30px;
     margin: 0px 15px;
     border: solid 1px #6244a4;
-    border-radius: 30px 0 30px 0;
+    border-radius: 30px;
     transition: backgroud .5s;
 
 }
@@ -266,12 +266,13 @@ p {
 }
 
 .call-to-action {
-    color: #333;
+    color: #f4f4f4;
     font-weight: 700;
     padding: 10px 100px;
     font-size: 20px;
+    border-radius: 15px;
     transition: .2s;
-    background: #BAA1F8;
+    background: #6244a4;
 }
 
 .call-to-action:hover {
