--- a/buyPath/css/product.css
+++ b/buyPath/css/product.css
@@ -23,7 +23,7 @@ p {
     top: 0;
     width: 100%;
     height: 90px;
-    background: #b59af8ec;
+    background: #F3EDFB;
     opacity: 1;
     z-index: 99;
     position: fixed;
@@ -105,7 +105,7 @@ p {
     padding: 10px 30px;
     margin: 0px 15px;
     border: solid 1px #6244a4;
-    border-radius: 30px 0 30px 0;
+    border-radius: 30px ;
     transition: backgroud .5s;
 
 }
